--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -38,3 +38,36 @@
 
  
 }
+
+.navs{
+   ::-webkit-scrollbar{
+      width: 0;
+   }
+   ul{
+      
+      display: flex;
+      width: 100%;
+
+      overflow-y: auto;
+   
+      -webkit-overflow-scrolling: touch;
+      li{
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         position: relative;
+         width: 50%;
+         img{
+            width: 40px;
+            padding: 0 18px 5px 18px;
+         }
+         span{
+            font-size: 12px;
+         }
+      }
+   }
+}
+
+
+
