--- a/src/pages/login/index.module.scss
+++ b/src/pages/login/index.module.scss
@@ -30,13 +30,17 @@
    .login_bottom{
       width: 100%;
     flex-grow: 1;
-      .login_input{
+      .login_input,.login_verify{
          width: 100%;
          height: 50px;
          background: rgb(243, 244, 246);
          display: flex;
+    
          align-items: center;
          border-radius: 8px;
+      }
+      .login_verify{
+         margin-top: 10px;
       }
       .buttom{
          margin-top: 20px;
