--- a/src/components/list/index.module.scss
+++ b/src/components/list/index.module.scss
@@ -2,6 +2,13 @@
    ::-webkit-scrollbar{
       width: 0;
    }
+  .title{
+   margin: 0;
+   padding: 0 12px 5px 12px;
+   font-weight: 700;
+   font-size: 16px;
+   color: rgb(63, 70, 86);
+  }
 }
 
 .list{
@@ -29,13 +36,14 @@
       .img{
          width: 50px;
          height: 50px;
-         background: red;
+         
          border-radius: 5px; 
       }
       .leftText{
          padding: 5px;
          p{
             margin: 0;
+            padding-bottom: 10px;
          }
       }
    }
